--- a/app/src/main/res/layout/selection_layout.xml
+++ b/app/src/main/res/layout/selection_layout.xml
@@ -12,7 +12,7 @@
     <ImageButton
         android:id="@+id/button_take_piture"
         android:background="@drawable/background_button"
-        android:src="@drawable/call_button"
+        android:src="@drawable/call_button_image"
         android:layout_width="88dp"
         android:layout_height="118dp"
         android:layout_gravity="right|center_vertical" />
